src/components/Button/Button.module.scss
@import './src/theme/pallete';
@import './src/theme/functions';
@import './src/theme/typography';

.button {
  display: flex;
  justify-content: center;
  border: 0;
  cursor: pointer;
  box-shadow: none;
  outline: none;
  @include text-14-b;
  padding: 8px 16px;
  display: flex;
  align-items: center;
  transition: $transition;
  max-height: 45px;
  min-width: 80px;
  border-radius: $border_radius;

  &:not(.disabled):hover {
    transition: $transition;
  }

  svg {
    flex-shrink: 0;
    margin-right: 8px;
    path {
      transition: fill 0.2s;
    }
  }
}

.primary {
  &.positive {
    background: $green;
    border: 2px solid $green;

    &:not(.disabled):hover {
      color: $green;
      background: $black;
      border: 2px solid $black;
    }

    &:hover {
      svg {
        path {
          transition: fill 0.2s;
          fill: $green;
        }
      }
    }
  }

  &.negative {
    background: $red;
    border: 2px solid $red;

    &:not(.disabled):hover {
      color: $red;
      background: $black;
      border: 2px solid $black;
    }

    &:hover {
      svg {
        path {
          transition: fill 0.2s;
          fill: $red;
        }
      }
    }
  }

  &.neutral {
    background: $back_dark_grey;
    border: 2px solid $back_dark_grey;

    &:not(.disabled):hover {
      color: $back_dark_grey;
      background: $black;
      border: 2px solid $black;
    }

    &:hover {
      svg {
        path {
          transition: fill 0.2s;
          fill: $back_dark_grey;
        }
      }
    }
  }
}

.secondary {
  background: $white;
  &.positive {
    border: 2px solid $green;

    &:not(.disabled):hover {
      color: $green;
      background: $black;
      border: 2px solid $black;
    }

    &:hover {
      svg {
        path {
          fill: $green;
        }
      }
    }
  }

  &.negative {
    border: 2px solid $red;

    &:not(.disabled):hover {
      color: $red;
      background: $black;
      border: 2px solid $black;
    }

    &:hover {
      svg {
        path {
          fill: $red;
        }
      }
    }
  }

  &.neutral {
    border: 2px solid $back_dark_grey;

    &:not(.disabled):hover {
      color: $back_dark_grey;
      background: $black;
      border: 2px solid $black;
    }

    &:hover {
      svg {
        path {
          fill: $back_dark_grey;
        }
      }
    }
  }
}

.plain {
  background: transparent;
  padding: 2px 5px;
  border: 2px solid transparent;

  &:not(.disabled):hover {
    color: $black;
    background: transparent;
    border: 2px solid transparent;
    text-decoration: underline;
  }

  &:hover {
    svg {
      path {
        fill: $black;
      }
    }
  }

  &.positive {
    color: $green;

    svg {
      path {
        fill: $green;
      }
    }
  }

  &.negative {
    color: $red;

    svg {
      path {
        fill: $red;
      }
    }
  }

  &.neutral {
    color: $back_dark_grey;

    svg {
      path {
        fill: $back_dark_grey;
      }
    }
  }
}

.loader {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  svg {
    width: 18px;
    height: 18px;
    margin-right: 0;
  }
}

.disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

